modifed a little bit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
       <header>
         <h1>BARIŞ YAYCI</h1>
-        <p>spesyal web sitesi</p>
       </header>
 
 
@@ -22,44 +21,22 @@
         <h2>👩🏽‍🚀 Projeler</h2>
 
         <p>
-          -Mevlana Drone
-          <br>
-          -Bozuk garson robot
-          <br>
-          -Salak soru uygulaması
-          <br>
-          -Sanal zikirmatik
+          <h3>-Mevlana Drone</h3>
+          <p>Malzeme kalitesi nedeniyle uçarken kanadı kırıldı sonra sanayide yeni malzemeyle denendi fakat bu sefer sanayideki abi deliği yanlış yere açtığığından mevlana gibi dönerek uçtu en son duvara vurdu ve pervane kırıldı Alp Özcan ile beraber Geliştiridi.</p>
+          <h3>-Garson robot</h3>
+          <p>Alp Özcanın tabiriyle "Made an autonomous vehicle that can give medicines and food to bedridden people by following lines." Alp Özcan ile beraber geliştirildi</p>
+          <h3>-Soru uygulaması</h3>
+          <p>Zamanım olmadığı için hiç çıkmadı yarıda kaldı <a href="https://github.com/nagmex210/sizzle">source code</a>.</p>
           <br>
           - 🔜
         </p>
-
-        <h2>🏆 Başarılar</h2>
-
-        <p>
-          -2019 YIlın ORORSpu çocuğu ödülü
-          <br>
-          -2009 Baloon D'or
-          <br>
-          -Oscar yılın en iyi Non Binary Oyuncu
-          <br>
-          -Gs Yılın oyunucusu 2009
-          <br>
-          -2022 Ömer Bayram Araştırma ödülü
-          <br>
-        </p>
-
       </section>
 
-      <blockquote>
-        <p>Ölüm geldiğine mal da gider mülk de gider, eş gider dost gider ama iman kabre bizimle beraber girer…
-          <br>-Engin SOBA</p>
-      </blockquote>
+      
 
       <section class="left">
         <h2>BANA ULAŞ</h2>
         <a href="https://github.com/nagmex210" class="fa fa-github"></a>
-        <a href="https://mobile.twitter.com/SobaEngin" class="fa fa-twitter"></a>
-        <a href="https://www.instagram.com/diyego916/" class="fa fa-instagram"></a>
         <br>
         <p>
           email: barsyayc@gmail.com
@@ -68,13 +45,9 @@
           tel no: 5354940078
         </p>
       </section>
-
-
     </main>
     
     <script type="module" src="/main.js"></script>
-
-
 
   </body>
 </html>
