made minor changes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <p>Alp Özcanın tabiriyle "Made an autonomous vehicle that can give medicines and food to bedridden people by following lines." Alp Özcan ile beraber geliştirildi</p>
           <h3>-Soru uygulaması</h3>
           <p>Zamanım olmadığı için hiç çıkmadı yarıda kaldı <a href="https://github.com/nagmex210/sizzle">source code</a>.</p>
-          <br>
-          - 🔜
+          <h3>-Portfolyo uygulaması</h3>
+          <p>🔜 şu an sadece frontend kısmı source code mevcut <a href="https://github.com/nagmex210/MuseUfrontend">source code</a>.</p>
         </p>
       </section>
 
