added missing credit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <p>
           <h3>-Mevlana Drone</h3>
-          <p>Malzeme kalitesi nedeniyle uçarken kanadı kırıldı sonra sanayide yeni malzemeyle denendi fakat bu sefer sanayideki abi deliği yanlış yere açtığığından mevlana gibi dönerek uçtu en son duvara vurdu ve pervane kırıldı Alp Özcan ile beraber Geliştiridi.</p>
+          <p>Malzeme kalitesi nedeniyle uçarken kanadı kırıldı sonra sanayide yeni malzemeyle denendi fakat bu sefer sanayideki abi deliği yanlış yere açtığığından mevlana gibi dönerek uçtu en son duvara vurdu ve pervane kırıldı Alp Özcan ve Hayati Bora Çelebi ile beraber Geliştiridi.</p>
           <h3>-Garson robot</h3>
           <p>Alp Özcanın tabiriyle "Made an autonomous vehicle that can give medicines and food to bedridden people by following lines." Alp Özcan ile beraber geliştirildi</p>
           <h3>-Soru uygulaması</h3>
